--- a/Mealsplanner/app/src/main/AndroidManifest.xml
+++ b/Mealsplanner/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:theme="@style/Theme.MealsPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".all_meals.view.MealOfTheDayActivity"
+            android:name=".meals_search.view.MealSearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".meals_by_countries.view.MealByCountryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".meals_by_categories.view.MealByCategoryActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -26,6 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".meal_of_the_day.view.MealOfTheDayActivity" />
     </application>
 
 </manifest>
