--- a/Mealsplanner/app/src/main/AndroidManifest.xml
+++ b/Mealsplanner/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.MealsPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".meals_search.view.MealSearchActivity"
+            android:name=".meals_search.view.MealSearchFragment"
             android:exported="false" />
         <activity
-            android:name=".meals_by_countries.view.MealByCountryActivity"
+            android:name=".meals_by_countries.view.MealByCountryFragment"
             android:exported="false" />
         <activity
-            android:name=".meals_by_categories.view.MealByCategoryActivity"
+            android:name=".meals_by_categories.view.MealByCategoryFragment"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
