--- a/Mealsplanner/app/src/main/AndroidManifest.xml
+++ b/Mealsplanner/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         <activity
             android:name=".meals_categories.view.MealCategoryDetailsActivity"
             android:exported="false" />
-        <activity
-            android:name=".meal_of_the_day.view.MealDetailsActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".meal_of_the_day.view.MealDetailsActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
